[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/World/Crossfader.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/Intro.ogg" type="AudioStream" id=2]

[sub_resource type="Animation" id=1]
resource_name = "FadeToFirstTrack"
tracks/0/type = "value"
tracks/0/path = NodePath("FirstTrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 0.176777 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SecondTrack:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 4 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SecondTrack:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeToSecondTrack"
tracks/0/type = "value"
tracks/0/path = NodePath("FirstTrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FirstTrack:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SecondTrack:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1.75277e-05 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Crossfader" type="Node"]
script = ExtResource( 1 )

[node name="FirstTrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SecondTrack" type="AudioStreamPlayer" parent="."]
volume_db = -80.0

[node name="TrackFader" type="AnimationPlayer" parent="."]
anims/FadeToFirstTrack = SubResource( 1 )
anims/FadeToSecondTrack = SubResource( 2 )
